deployment-back.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: back-deployment
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: backend:1.0
        ports:
        - containerPort: 3000
