deployment-front-1.1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: backend:1.1
        ports:
        - containerPort: 3000
