endpoints-mongo.yaml
kind: Endpoints
apiVersion: v1
metadata:
 name: mongo
subsets:
 - addresses:
     - ip: 54.91.243.222
   ports:
     - port: 59200
