service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
