service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
