ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myexample1.com
    http:
      paths:
      - path: /back-service
        backend:
          serviceName: back-service
          servicePort: 3000
      - path: /front-service
        backend:
          serviceName: front-service
          servicePort: 3000
  - host: myexample2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: back-service
          servicePort: 3000
